--- a/gamesketch.html
+++ b/gamesketch.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="./fishCoach.css" />
 
   <style>
-    :root { --headerH: 72px; }
-
+    /* Quick sketch styling (keep simple for now) */
     body{
       margin:0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -22,7 +21,6 @@
     }
 
     header{
-      height: var(--headerH);
       display:flex;
       justify-content:space-between;
       align-items:center;
@@ -30,9 +28,6 @@
       border-bottom: 1px solid rgba(255,255,255,0.12);
       background: rgba(0,0,0,0.25);
       backdrop-filter: blur(10px);
-      position: sticky;
-      top: 0;
-      z-index: 20;
     }
 
     .brand{
@@ -165,13 +160,28 @@
       gap: 14px;
     }
 
+    .miniCoachPreview{
+      display:grid;
+      gap: 10px;
+      align-items:center;
+      justify-items:center;
+      text-align:center;
+    }
+
+    .miniCoachPreview img{
+      width: 100%;
+      max-width: 360px;
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,0.12);
+      box-shadow: 0 14px 50px rgba(0,0,0,0.45);
+    }
+
     .tip{
       border: 1px solid rgba(255,255,255,0.12);
       background: rgba(0,0,0,0.22);
       border-radius: 16px;
       padding: 12px;
       font-weight: 900;
-      line-height: 1.5;
     }
   </style>
 </head>
@@ -196,11 +206,12 @@
     <section class="panel">
       <div class="muted">
         This is a sketch page for the capstone. The main feature is the <b>Fish Coach feedback</b>
-        after each decision. Click any option below to test the coach overlay + typing + win/lose SFX.
+        after each decision. Click any option below to test the coach overlay + typing sound.
       </div>
     </section>
 
     <div class="row">
+      <!-- Left: Scenario -->
       <section class="panel">
         <div class="scenarioCard">
           <div class="scenarioHeader">
@@ -232,19 +243,20 @@
         </div>
       </section>
 
+      <!-- Right: Coach preview -->
       <section class="panel side">
-        <div class="tip">
-          ✅ Fish is hidden while players solve.<br>
-          ✅ Fish appears full-screen style during feedback.<br>
-          ✅ Bubble stays at top so it won’t cover fish or man.
+        <div class="miniCoachPreview">
+          <div class="muted"><b>Coach Art Preview</b> (uses your real file name)</div>
+          <img src="./Fish%20game%20char.png" alt="Fish Coach Preview">
+          <div class="tip">Coach = teach + congratulate + explain red flags after each decision.</div>
         </div>
       </section>
     </div>
   </main>
 
-  <!-- Coach overlay -->
-  <div id="fishCoachOverlay" class="fish-overlay hidden" aria-hidden="true">
-    <div class="fish-fullscreen">
+  <!-- Coach overlay markup -->
+  <div id="fishCoachOverlay" class="fish-overlay hidden">
+    <div class="fish-container">
 
       <div class="fish-image-wrapper">
         <img src="./Fish%20game%20char.png" alt="Fish Coach" class="fish-image">
@@ -265,6 +277,7 @@
   <script src="./fishCoach.js"></script>
 
   <script>
+    // Hook the demo buttons to the coach overlay
     document.getElementById("btnReport").addEventListener("click", () => showFishCoach("perfect"));
     document.getElementById("btnCall").addEventListener("click", () => showFishCoach("good"));
     document.getElementById("btnClick").addEventListener("click", () => showFishCoach("bad"));
