Updated level files
Adams sprint 1 level files 2.0 version

--- a/levelMap.html
+++ b/levelMap.html
@@ -16,6 +16,10 @@
 
     <!-- Add id="map" -->
     <div class="map-container" id="map">
+     
+      <!-- Ambient layers (decor only) -->
+<div class="map-nebula" aria-hidden="true"></div>
+<div class="map-particles" aria-hidden="true"></div>
       <div class="path">
         <svg class="path-svg" viewBox="0 0 1000 500" preserveAspectRatio="none">
           <!-- Add id="route" -->
