--- a/level1.html
+++ b/level1.html
@@ -45,9 +45,7 @@
 
       <nav class="folders">
         <button class="folder active">📥 Inbox</button>
-        <button class="folder">⭐ Flagged</button>
         <button class="folder">🚩 Reported</button>
-        <button class="folder">🗑 Deleted</button>
       </nav>
 
       <div class="meta muted">
@@ -74,11 +72,12 @@
         </div>
 
         <div class="reader-actions">
-          <button class="btn good">Report</button>
-          <button class="btn ok">Verify Sender</button>
-          <button class="btn bad">Open Link</button>
-          <button class="btn neutral">Delete</button>
-        </div>
+  <button class="btn good" data-action="report">Report</button>
+  <button class="btn ok" data-action="inspect">Inspect</button>
+  <button class="btn bad" data-action="open">Open Link</button>
+  <button class="btn neutral" data-action="delete">Delete</button>
+  <button class="btn neutral" data-action="reply">Reply</button>
+</div>
       </div>
 
       <article class="reader-body" id="readerBody"></article>
